--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,8 +5,15 @@ import Layout from "../layouts/Layout.astro"
 
 <Layout title="ブログ">
     <body>
-        <a href="/">ホーム</a>
-		<a href="/about/">aboutページ</a>
+        
+		
         <h2>ブログページ</h2>
+        <ul>
+            <li><a href="/">ホーム</a></li>
+            <li><a href="/about/">aboutページ</a></li>
+            <li><a href="/posts/post-1/">Post 1</a></li>
+            <li><a href="/posts/post-2/">Post 2</a></li>
+            <li><a href="/posts/post-3/">Post 3</a></li>
+        </ul>
     </body>
 </Layout>
